# claurst

src-rust/: ACCESSIBILITY_CODE_ARCHITECTURE.md  ACCESSIBILITY_TESTING_GUIDE.md  ADVANCED_MOUSE_INTERACTIONS.md  CHANGES.md  CHANGES.txt  CODE_CHANGES_REFERENCE.md  COLORBLIND_ACCESSIBILITY_SUMMARY.md  COMPLETION_REPORT.md  DEEP_ANALYSIS_GAPS.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_RESULTS_V1.md  LINK_DETECTION_FINAL_REPORT.md  LINK_DETECTION_IMPLEMENTATION.md  MARKDOWN_ENHANCEMENTS.md  MESSAGE_COPY_FEATURE_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  RELEASE_STATUS_V1.0.md  VERSION_1_FEATURE_COMPLETE.md
src-rust/crates/api/src/: registry.rs
src-rust/crates/api/src/providers/: openai_compat_providers.rs
src-rust/crates/cli/src/: main.rs
src-rust/crates/core/src/: context_collapse.rs  keybindings.rs  lib.rs
src-rust/crates/query/src/: agent_tool.rs  lib.rs
src-rust/crates/tools/: Cargo.toml
src-rust/crates/tui/: Cargo.toml
src-rust/crates/tui/src/: kitty_image.rs  model_picker.rs  prompt_input.rs  session_branching.rs
src-rust/crates/tui/src/messages/: markdown.rs  markdown_enhanced.rs  mod.rs
src-rust/crates/tui/tests/: markdown_enhancements.rs
